# cpp-client-sdk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  kong.yml  main.yml
example/: CMakeLists.txt  example.cpp  main.cpp
example/cmake/: statsig.cmake
include/: evaluations_data_provider.h  statsig.h  statsig_client.h  statsig_event.h  statsig_event.hpp  statsig_options.h  statsig_types.h  statsig_types.hpp  statsig_user.h
include/data_providers/: local_file_cache_evaluations_data_provider.h  network_evaluations_data_provider.h
include/statsig/: evaluations_data_adapter.h  json_provider.h  network_provider.h  statsig.h  statsig_client.h  statsig_options.h  statsig_result.h  statsig_types.h  value_map.h
include/statsig/data_providers/: local_file_cache_evaluations_data_provider.h  network_evaluations_data_provider.h
include/statsig_compatibility/async/: async_helper.hpp
include/statsig_compatibility/json/: initialize_request_args_json.hpp  initialize_response_json.hpp  json_value.hpp  statsig_event_json.hpp
include/statsig_compatibility/json_serialization/: data_adapter_result_json.hpp  error_boundary_request_args_json.hpp  initialize_request_args_json.hpp  initialize_response_json.hpp  statsig_event_json.hpp
include/statsig_compatibility/network/: network_client.hpp
lib/macOS/: libStatsigClientSDK.dylib
src/: constants.h  detailed_evaluation.h  error_boundary.hpp  evaluation_details_internal.hpp  evaluation_reason.hpp  evaluation_store.cpp  evaluation_store.h  evaluation_store.hpp  event_logger.hpp  file.hpp  hashing.hpp  initialize_request_args.h  initialize_response.hpp  json_parser.hpp  macros.hpp  network_service.cpp  network_service.h  network_service.hpp  stable_id.hpp  statsig.cpp  statsig.h  statsig_client.cpp  statsig_client.h  statsig_context.h  statsig_context.hpp  statsig_evaluations_data_adapter.hpp  statsig_event_internal.hpp  statsig_internal.h  statsig_logger.cpp  statsig_logger.h  statsig_logger.hpp  statsig_options.cpp  statsig_options.h  statsig_types.cpp  statsig_user.cpp  statsig_user.h  statsig_user_internal.hpp  time.hpp  uuid.hpp  value_map.cpp
src/compat/async/: async_helper.hpp
src/compat/constants/: constants.h
src/compat/json/: json_value.hpp
src/compat/json_serialization/: data_adapter_result_json.hpp  error_boundary_request_args_json.hpp  failed_log_event_payload_json.hpp  initialize_request_args_json.hpp  initialize_response_json.hpp  log_event_response_json.hpp  statsig_event_json.hpp  statsig_user_json.hpp
src/compat/network/: network_client.hpp
src/data_providers/: local_file_cache_evaluations_data_provider.cpp  local_file_cache_evaluations_data_provider.hpp  network_evaluations_data_provider.cpp  network_evaluations_data_provider.hpp
src/data_types/: data_adapter_result_json.hpp  error_boundary_request_args_json.hpp  initialize_request_args_json.hpp  initialize_response_json.hpp  json_parser.hpp  statsig_event_json.hpp  statsig_user_json.hpp
src/data_types/default_json_types/: data_adapter_result_json.hpp
src/internal/: detailed_evaluation.h  evaluation_details_internal.hpp  evaluation_store.hpp  event_logger.hpp  initialize_request_args.h  initialize_response.hpp  network_service.hpp  statsig_client.cpp  statsig_context.hpp  statsig_evaluations_data_adapter.hpp  statsig_internal.h  statsig_types.cpp  statsig_user_internal.hpp
src/public/: statsig_client.h  statsig_types.h  statsig_user.h
src/statsig/: evaluation_details.h  evaluations_data_adapter.h  log_level.h  statsig.h  statsig_client.h  statsig_environment.h  statsig_event.h  statsig_options.h  statsig_result.h  statsig_types.h  statsig_user.h
src/statsig/internal/: constants.cpp  constants.h  detailed_evaluation.h  diagnostic_markers.hpp  diagnostics.cpp  diagnostics.hpp  error_boundary.cpp  error_boundary.hpp  error_boundary_request_args.h  evaluation_details_internal.hpp  evaluation_store.hpp  event_logger.hpp  file.hpp  hashing.hpp  initialize_request_args.h  initialize_response.hpp  json_parser.hpp  log.hpp  macros.hpp  network_service.hpp  shareable.hpp  stable_id.hpp  statsig_client.cpp  (+9 more)
tests/: CMakeLists.txt  mock_eval_data_adapter.hpp  test_cache_dir.cpp  test_error_boundary.cpp  test_helpers.hpp  test_json_parsing.cpp  test_statsig_client_threaded.cpp  test_statsig_event.cpp  test_statsig_result.cpp  test_statsig_types.cpp  test_statsig_user.cpp  test_value_map.cpp
tests/cmake/: googletest.cmake
(+36 files in other folders)
